Details
-
Bug
-
Resolution: Fixed
-
Trivial
-
None
-
74,136
Description
reactOS 0.4.7RC1
DVDWrite Now 1.5.12 Formatter GUI
has drawing issues and draws the font-background grey instead of white.
047rc1-backgroundDrawing-dvdwritenowformatter.png![]()
047RC1-DVDWriteFormatterBackgroundIssue.log![]()
Issue is reproducible for me.
Attachments
Issue Links
- relates to
-
CORE-14622 [comctl32] Regression Background Colour is displayed grey but should be white (where no text is) in setup wizard of Antivir
-
- Resolved
-
-
CORE-12912 comctl32 regressions after Wine sync r74090
-
- Untriaged
-