[0.4.7] Apply drawing issue fix for propsheets in comctl32, approved by Joachim Henze. See commit 11049bd (issue CORE-13929).